--- a/templates/account/signup.html
+++ b/templates/account/signup.html
@@ -4,7 +4,7 @@
 {% block title %}{% trans "회원가입" %}{% endblock %}
 
 {% block content %}
-<div class="container mt-5">
+<div class="container mt-5 animate__animated animate__fadeInUp">
     <div class="row justify-content-center">
         <div class="col-md-6">
             <div class="card shadow-lg">
