--- a/templates/accounts_list.html
+++ b/templates/accounts_list.html
@@ -30,7 +30,7 @@
                         <table class="table table-striped table-hover mb-0">
                             <thead>
                                 <tr>
-                                    <th scope="col">은행 코드</th>
+                                    <th scope="col">은행명</th>
                                     <th scope="col">계좌번호</th>
                                     <th scope="col">계좌 유형</th>
                                     <th scope="col">잔액</th>
@@ -40,7 +40,7 @@
                             <tbody>
                                 {% for account in accounts %}
                                 <tr>
-                                    <td>{{ account.bank_code }}</td>
+                                    <td>{{ account.get_bank_code_display }}</td>
                                     <td>{{ account.account_number }}</td>
                                     <td>{{ account.get_account_type_display }}</td>
                                     <td>₩ {{ account.balance|floatformat:0|intcomma }}</td>
