feat: 거래 내역 기반 감정 분석 및 내역 조회 기능 구현

--- a/templates/base.html
+++ b/templates/base.html
@@ -47,7 +47,7 @@
                 <li><a class="dropdown-item {% if request.path == '/dashboard/' %}active{% endif %}" href="{% url 'dashboard' %}">홈</a></li>
                 <li><a class="dropdown-item {% if request.path == '/accounts/' %}active{% endif %}" href="{% url 'accounts_list' %}">계좌</a></li>
                 <li><a class="dropdown-item {% if request.path == '/transactions/' %}active{% endif %}" href="{% url 'transactions_list' %}">거래내역</a></li>
-                <li><a class="dropdown-item {% if request.path == '/sentiment-analysis/' %}active{% endif %}" href="{% url 'sentiment_analysis' %}">감정 분석</a></li>
+                <li><a class="dropdown-item {% if request.path == '/analysis-history/' %}active{% endif %}" href="{% url 'analysis_history' %}">감정 분석</a></li>
                 <li><a class="dropdown-item {% if request.path == '/profile/' %}active{% endif %}" href="{% url 'profile' %}">프로필</a></li>
                 <li><hr class="dropdown-divider"></li>
                 <li>
@@ -96,7 +96,7 @@
             <i class="bi bi-receipt-cutoff d-block fs-4"></i>
             <small>거래내역</small>
         </a>
-        <a class="nav-link text-center" href="{% url 'sentiment_analysis' %}">
+        <a class="nav-link text-center" href="{% url 'transactions_list' %}">
             <i class="bi bi-emoji-smile-fill d-block fs-4"></i>
             <small>감정 분석</small>
         </a>
