--- a/templates/dashboard.html
+++ b/templates/dashboard.html
@@ -43,7 +43,7 @@
         </div>
     </div>
 
-    <div class="row">
+    <div class="row g-4">
         <div class="col-md-12 mb-4">
             <div class="card">
                 <div class="card-header">
@@ -55,7 +55,7 @@
                 <div class="card-body">
                     {% if recent_transactions %}
                     <div class="table-responsive">
-                        <table class="table table-hover mb-0">
+                        <table class="table table-hover mb-0 align-middle">
                             <thead>
                                 <tr>
                                     <th scope="col">ID</th>
